envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/auth"
                          route:
                            cluster: service_auth
                        - match:
                            prefix: "/business"
                          route:
                            cluster: service_business
                            retry_policy:
                              retry_on: connect-failure, 5xx
                              num_retries: 5
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service_auth
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_auth
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 10.0.1.232
                      port_value: 30000
    - name: service_business
      connect_timeout: 0.25s
      type: strict_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      #      hosts: [
      #        {socket_address: { address: 10.0.1.232, port_value: 30001 }},
      #        {socket_address: { address: 10.0.1.232, port_value: 30002 }},
      #      ]
      load_assignment:
        cluster_name: service_business
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 10.0.1.232
                    port_value: 30001
            - endpoint:
                address:
                  socket_address:
                    address: 10.0.1.232
                    port_value: 30002
      health_checks:
        - timeout: 1s
          interval: 10s
          interval_jitter: 1s
          unhealthy_threshold: 1
          healthy_threshold: 1
          http_health_check:
            path: "/_/health"
